--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
